--- a/src/IgnoresAccessChecksToGenerator.Tasks/IgnoresAccessChecksToGenerator.Tasks.csproj
+++ b/src/IgnoresAccessChecksToGenerator.Tasks/IgnoresAccessChecksToGenerator.Tasks.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
+    <NuspecFile>IgnoresAccessChecksToGenerator.nuspec</NuspecFile>
   </PropertyGroup>
 
   <ItemGroup>
