--- a/src/IgnoresAccessChecksToGenerator.Tasks/IgnoresAccessChecksToGenerator.nuspec
+++ b/src/IgnoresAccessChecksToGenerator.Tasks/IgnoresAccessChecksToGenerator.nuspec
@@ -1,21 +1,21 @@
 <?xml version="1.0"?>
-<package >
+<package>
   <metadata>
     <id>IgnoresAccessChecksToGenerator</id>
-    <version>0.4.0</version>
+    <version>0.5.0</version>
     <authors>aelij</authors>
     <owners>aelij</owners>
-    <licenseUrl>https://github.com/aelij/IgnoresAccessChecksToGenerator/blob/master/LICENSE</licenseUrl>
+    <license type="expression">MIT</license>
     <projectUrl>https://github.com/aelij/IgnoresAccessChecksToGenerator</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Generates IgnoresAccessChecksTo attributes and reference assemblies to allow compile-time access to internals</description>
     <releaseNotes></releaseNotes>
-    <copyright>Copyright 2017</copyright>
+    <copyright>Copyright 2021</copyright>
     <tags>IgnoresAccessChecksToGenerator internals</tags>
   </metadata>
   <files>
-    <file src="IgnoresAccessChecksToGenerator.Tasks\bin\Release\**\*.dll" target="tools" />
-    <file src="IgnoresAccessChecksToGenerator.Tasks\bin\Release\**\*.deps.json" target="tools" />
-    <file src="Build\**" target="build" />
+    <file src="bin\Release\**\*.dll" target="tools" />
+    <file src="bin\Release\**\*.deps.json" target="tools" />
+    <file src="..\Build\**" target="build" />
   </files>
 </package>
